--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@
   /* border: #000000 1px solid; */
   box-shadow: 0 0 10px 2px  #cecece;
   display: inline-block;
+  margin-top: 50px;
 }
 
  ul.nav {
