--- a/src/App.css
+++ b/src/App.css
@@ -102,13 +102,13 @@ ul.nav li.active {
   align-items: center;
   flex-direction: column;
 }
-.hiddenText{
+.hiddenTex{
   /* display: flex; */
   text-align:center;
   width: 350px;
   height: auto;
   font-size:larger;
-  /* border: 1Px solid black; */
+  /* */
   margin-bottom:20px ;
 }
 .toTab2{
@@ -239,11 +239,6 @@ span{
   text-decoration: none;
   cursor: pointer;
 }
-
-/* .AddButton:hover {
-  box-shadow: 0 0 5px 0.5px var(--varColor);
-  border: 1px solid var(--varColor);
-} */
 .AddButton:active {
   background-color: var(--varColor);
   color: #ffffff;
@@ -350,36 +345,38 @@ span{
 
 .conditionContianer{
   display: flex;
-  flex-direction: row;
   width: 100%;
   height: auto;
-  gap: 10px;
-  padding: 10px;
+  padding: 25px;
+  justify-content: center;
+  align-items: center;
 }
 .listOfConditions{
-  flex: 40%;
+  flex: 50%;
   display: flex;
   flex-direction: column;
   width: 100%;
   height: auto;
   padding: 10px;
   padding-left: 50px;
-}
-.conditionINFO{
-  flex: 40%;
-  display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
-  height: fit-content;
-  padding: 20px;
 }
 .condition{
   display: flex;
   align-items: center;
-  width: 80%;
+  width: 30%;
   height: 60px;
   padding: 20px;
   margin-top: 10px;
-  background-color:#e7f5fd ;
+  background-color: rgb(224, 217, 217) ;
+  justify-content: center;
+  font-size: x-large;
+  font-style: normal;font-weight: 800;
+  border-radius: 20px;
+  color: #69a5d9;
+}
+.listOfConditions h3{
+  font-size: x-large;
+  color: #020D19;
 }
