--- a/src/components/sideBar.css
+++ b/src/components/sideBar.css
@@ -210,18 +210,41 @@ button{
     width: 750px;
     height: 430px;
     background-color: #fff;
-    text-align: center;
+    /* text-align: center; */
     box-shadow: 0 0 10px 2px #656565;
     z-index: 1;
-}
-.what{
-    width: 100%;
-    height: 100%;
-    border: 1px solid black;
 }
 
 .mb-0{
     font-size: larger;
     font-weight: 900;
     color: #5a8dee;
+}
+.descriptionSideBar{
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    width: auto;
+    padding: 10px;
+    gap: 10px;
+font-family: Sans-serif;
+    font-weight: 600;
+    justify-content: center;
+    align-items: center;
+    background-color: #f0f0f0;
+    border-radius: 5px;
+}
+.answer{
+    width: auto;
+    height: auto;
+    padding: 10px;
+    font-family: Sans-serif;
+    font-weight: 600;
+    font-size: large;
+    background-color: #ffffff;
+}
+.conditionContant h4{
+    font-family: Sans-serif;
+    font-weight: 600;
+    font-size: large;
 }
